--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -90,7 +90,7 @@
 <div class="row">
     <div class="col-8">    
     <div class="row m-auto">
-        <div class="lecture_note">Для создания лекции перетащите поле "УИН" из библиотеки загруженных файлов в соответсвующее поле в форме. При создании лекции без видеофайла просто оставьте это поле пустым.
+        <div class="lecture_note">Для создания лекции перетащите поле "УИН" из библиотеки загруженных файлов в соответствующее поле в форме. При создании лекции без видеофайла просто оставьте это поле пустым.
         </div>
         <div class="create_lecture">
         <h3>Создать новую лекцию</h3>
@@ -217,7 +217,9 @@
     {% for item in v_files%}
     <div class="row mb-2">
         <div class="col-2">
-            <div class="hint">Перетащите поле с УИН лекции в соответсвующее поле в форме "Создать новую лекцию".</div>
+            <div class="hint">
+                Перетащите поле с УИН лекции в соответсвующее поле в форме "Создать новую лекцию".
+            </div>
             <div class="d-1" draggable="true">{{item.id}}
         </div>
     </div>
@@ -225,7 +227,7 @@
         <div class="col-1">
             <a href="{% url 'delete_lecture' item.id %}" style="text-decoration: none">
                 <!-- <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'><div class="col-1"> -->
-                <button type="button" class="btn-close" aria-label="Close"></button>
+                <button type="button" class="btn-close delete_cross" aria-label="Close"></button>
                
             </a>
         </div>
@@ -243,14 +245,14 @@
 {% if lecture.section == section %}
 
     <div class="row mt-2">
-        <div class="col-7">
-        <strong>Лекция {{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
+        <div class="col-8">
+        <strong>{{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
         </div>
         <div class="col-2">
             <input type="button" value="Редактировать" id="lecture_title" class="btn btn-sm btn-block btn-outline-dark">
         </div>
         <div class="col-2">
-            <a href="{% url 'delete_lecture' lecture.id %}" style="text-decoration: none">
+            <a href="{% url 'delete_enumerator' subject.id section.id lecture.id %}" style="text-decoration: none">
                 <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'>
             </a>
         </div>
@@ -262,16 +264,15 @@
                     <div class="lecture_box">
                         <div class="row">
                             <div class="col-11">
-                                <h4>Форма редактирования лекции</h4>
+                                <h4>Лекция: {{lecture.id}}</h4>
                             </div>
                             <div class="col-1">
-                                <button type="button" class="btn-close" aria-label="Close"></button>
+                                <button type="button" class="btn-close cross_button" aria-label="Close"></button>
                             </div>
-                          
                         </div>
                         <hr>
                         <div class="row">
-                            <!-- <div class="col-4">
+                            <div class="col-4">
                                 <div class="row">
                                     <div class="col-6"><strong>Порядковый номер: </strong></div>
                                     <div class="col-5">{{lecture.enumerator}}</div>
@@ -316,111 +317,110 @@
                                 <div class="row mt-1">
                                     <div class="col-5>
                                             <a class="nav-link" href="{{ lecture.video_file.url }}" target='_blank'>
-                                        <a> -->
+                                        <a>
                                             <video oncontextmenu="return false;" width="320" height="240" controls
                                                 controlsList="nodownload">
-                                                <!-- video width="320" height="240" controls controlsList="nodownload"> -->
+                                                 video width="320" height="240" controls controlsList="nodownload">
                                                 <source src="{{lecture.video_file.url}}" type="video/mp4">
                                             </video>
                                         </a>
                                     </div>
-                                </div>
+                                   
+                              
                                 {% else %}
                                 Видеофайл отсутствует.
                                 {% endif %}
-                            </div>
-        
-                            <div class="col-4">
-                                <form action="{% url 'edit_lecture' lecture.id %}" method="POST" enctype="multipart/form-data">
-                                    {% csrf_token %}
-                                    <div class="form-row mt-1 mb-1">
-                                        <div class="col-5">
-                                            <label for="lecture_id">
-                                                <strong>Уникальный идентификатор лекции:</strong>
-                                            </label>
-                                        </div>
-                                        <div class="col-4">
-                                            <input class='form-control i-2' type="text" id="lecture_id" name="lecture_id"placeholder={{lecture.id}}>
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-4"><label for="enumerator"> <strong>Редактировать порядковый номер: </strong></label>
-                                        </div>
-                                        <div class="col-8"><input class='form-control' type="number" id="enumerator" name="enumerator" placeholder={{lecture.enumerator}}
-                                                required></div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-4"><label for="title"> <strong>Редактировать название: </strong></label>
-                                        </div>
-                                        <div class="col-8"><input class='form-control' type="text" id="title" name="title"
-                                                placeholder={{lecture.title}} required></div>
-                                    </div>
-                                    <!-- <div class="form-row">
-                                        <div class="col-4"><label for="video_file"> <strong>Загрузите видеофайл: </strong></label>
-                                        </div>
-                                        <div class="col-8">
-                                            <input type="file" class="form-control" id="video_file" name="video_file" required>
-                                        </div>
-                                    </div> -->
-
-                                    <div class="form-row mt-4">
-                                        <div class="col-4">
-                                            <label for="url_link">
-                                                <strong>Введите ссылку на ресурс:</strong>
-                                            </label>
-                                        </div>
-                                        <div class="col-8">
-                                            <input type="url" class="form-control" id="url_link" name="url_link" placeholder="https://.">
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-4"><label for="additional_file"> <strong>Загрузите дополнительный файл: </strong></label>
-                                        </div>
-                                        <div class="col-8">
-                                            <input type="file" class="form-control" id="additional_file" name="additional_file">
-                                        </div>
-                                    </div>
-                                    <div class="row mt-2">
-                                        <div class="col-4"></div>
-                                        <div class="col-4"><input type="submit" value="Редактировать"
-                                                class='btn btn-block btn-outline-dark'>
-                                        </div>
-                                    </div>
-        
-                                </form>
-        
-                                <div class="col-4">
-                                    <a href="{% url 'delete_lecture' lecture.id %}" style="text-decoration: none">
-                                        <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
-                                        <input type="button" value="Удалить" class='btn btn-block btn-outline-dark'>
-                                    </a>
                                 </div>
+                                </div>
+        
+                        <div class="col-4">
+                            <form action="#" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="form-row mt-1 mb-1">
+                                    <div class="col-5">
+                                        <label for="lecture_id">
+                                            <strong>Уникальный идентификатор лекции:</strong>
+                                        </label>
+                                    </div>
+                                    <div class="col-4">
+                                        <input class='form-control i-2' type="text" id="lecture_id" name="lecture_id" value={{lecture.id}}>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-4"><label for="enumerator"> <strong>Редактировать порядковый номер: </strong></label>
+                                    </div>
+                                    <div class="col-8"><input class='form-control' type="number" id="enumerator" name="enumerator"
+                                            value={{lecture.enumerator}} required></div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-4"><label for="title"> <strong>Редактировать название: </strong></label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input class='form-control' type="text" id="title" name="title" value='{{lecture.title}}' required>
+                                    </div>
+                                </div>
+                                <!-- <div class="form-row">
+                                    <div class="col-4"><label for="video_file"> <strong>Загрузите видеофайл: </strong></label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input type="file" class="form-control" id="video_file" name="video_file" required>
+                                    </div>
+                                </div>
+                         -->
+                                <div class="form-row mt-4">
+                                    <div class="col-4">
+                                        <label for="url_link">
+                                            <strong>Введите ссылку на ресурс:</strong>
+                                        </label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input type="url" class="form-control" id="url_link" name="url_link"
+                                            placeholder="{{lecture.url_link}}.">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-4"><label for="additional_file"> <strong>Загрузите дополнительный файл: </strong></label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input type="file" class="form-control" id="additional_file" name="additional_file}">
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-4"></div>
+                                    <div class="col-4"><input type="submit" value="Редактировать" class='btn btn-block btn-outline-dark'>
+                                    </div>
+                              
+                        
+                            </form>
+                        
+                            <div class="col-4">
+                                <a href="{% url 'delete_lecture' lecture.id %}" style="text-decoration: none">
+                                    <input type="button" value="Удалить" class='btn btn-block btn-outline-dark'>
+                                </a>
                             </div>
+                        </div>
+                         
+                        </div>
+
+
+
 
                             <div class="col-4">
+                                <div class="row"><h4>Библиотека загруженных видеофайлов</h4></div>
                                 {% for item in v_files%}
                                 <div class="row">
                                     <div class="col-2">
                                         <div class="d-2" draggable="true">{{item.id}}</div>
                                     </div>
                                     <div class="col-9">{{item.video_file}}</div>
-                                    <div class="col-1">
-                                        <a href="{% url 'delete_lecture' item.id %}" style="text-decoration: none">
-                                            <!-- <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'><div class="col-1"> -->
-                                            <button type="button" class="btn-close" aria-label="Close"></button>
-                                
-                                        </a>
-                                    </div>
                                 </div>
                                 {% endfor %}
                             </div>
-
-        </div>
-
-                   
-                
-           
-        <!-- ==============================================End of Lectue Edit Modal=========================== -->
+                    </div>
+                </div>
+            </div>
+        </div>       
+    <!-- ==============================================End of Lectue Edit Modal=========================== -->
     {% endif %}
     {% endfor %}
 
@@ -436,9 +436,9 @@
     console.log('start OK')
     const lectures = document.querySelectorAll('#lectureModal');
     const titles = document.querySelectorAll('#lecture_title');
-    const buttons = document.querySelectorAll('.btn-close');
+    const buttons = document.querySelectorAll('.cross_button');
     const hint = document.querySelectorAll('.hint');
-    const btn_close = document.querySelectorAll('.btn-close');
+    const btn_close = document.querySelectorAll('.delete_cross');
     const create_lecture = document.querySelector('.create_lecture');
     const lecture_note = document.querySelector('.lecture_note');
     //Drag & Drop API
@@ -477,7 +477,7 @@
      
         for (let i = 0; i < btn_close.length; i++) {
             btn_close[i].addEventListener('click', (e) => {
-                alert('Данное действие приедет к удалению файла и соответствующей лекции. Вы действительно хотите это сделать?');
+                confirm('Данное действие приедет к удалению файла и соответствующей лекции. Вы действительно хотите это сделать?');
             });
         };
      
