--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -107,7 +107,7 @@
                     <strong>Уникальный Идентификационный Номер лекции :</strong>
                 </label>
             </div>
-            <div class="col-4">
+            <div class="col-7">
                 <input class='form-control i-1' type="text" id="lecture_id" name="lecture_id" placeholder="УИН">
             </div>
         </div>
@@ -119,7 +119,7 @@
                 </label>
             </div>
         
-            <div class="col-4">
+            <div class="col-7">
                 <input class='form-control' type="number" id="enumerator" name="enumerator" placeholder="Порядковый номер лекции"required>
             </div>
         </div>
@@ -129,7 +129,7 @@
                     <strong>Название лекции :</strong>
                 </label>
             </div>
-            <div class="col-4">
+            <div class="col-7">
                     <input type="text" class='form-control i-1'  id="title" name="title" placeholder="Название лекции" required>
             </div>
         </div>
@@ -143,24 +143,28 @@
                 <input type="file" class="form-control i-2" name="video_file" required>
             </div>
         </div> -->
-        <div class="form-row mt-1 mb-1">
-            <div class="col-5">
-                <label for="additional_file">
-                    <strong>Если необходимо, загрузите текстовый, архивный файл или изображение:</strong>
-                </label>
-            </div>
-            <div class="col-4">
-                <input type="file" class="form-control" id="additional_file" name="additional_file">
-            </div>
-        </div>
+     
         <div class="form-row mt-1 mb-1">
             <div class="col-5">
                 <label for="url_link">
                     <strong>Если необходимо, введите ссылку на ресурс:</strong>
                 </label>
             </div>
-            <div class="col-4">
+            <div class="col-7">
                 <input type="url" class="form-control" id="url_link" name="url_link" placeholder="https://">
+            </div>
+        </div>
+        <div class="form-row mt-1 mb-1">
+            <div class="col-11">
+                <label for="additional_file">
+                    <strong>Если необходимо, загрузите текстовый, архивный файл или изображение (txt, doc, jpeg, jpg, bmp, png,
+                        pdf, rar, zip.):</strong>
+                </label>
+            </div>
+        </div>
+        <div class="form-row m-auto">
+            <div class="col-12">
+                <input type="file" class="form-control" id="additional_file" name="additional_file">
             </div>
         </div>
         <!-- <div class="form-row">
@@ -183,7 +187,7 @@
                 <input type="file" class="form-control" id="translation_file" name="translation_file">
             </div> -->
        
-        <div class="form-row">
+        <div class="form-row mt-2">
             <div class="col-5 pl-4">
             <input type="checkbox" id='free_access' class='form-check-input' name='free_access' value='free_access'>
             </div>
@@ -248,7 +252,7 @@
 
     <div class="row mt-2 collection">
         <div class="col-8">
-        <strong>{{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
+        <strong>{{lecture.enumerator}}. УИН: {{lecture.id}}; Название: {{lecture.title}};. Дл.: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
         </div>
         <div class="col-2">
             <input type="button" value="Редактировать" id="lecture_title" class="btn btn-sm btn-block btn-outline-dark">
@@ -274,7 +278,7 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-3">
                                 <div class="row">
                                     <div class="col-6"><strong>Порядковый номер: </strong></div>
                                     <div class="col-5">{{lecture.enumerator}}</div>
@@ -338,16 +342,16 @@
                             {% endif %}
                             </div>
         
-                        <div class="col-4">
+                        <div class="col-5">
                             <form action="{% url 'edit_lecture' lecture.id %}" method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
-                                <div class="form-row mt-1 mb-1">
-                                    <div class="col-5">
+                                <div class="form-row">
+                                    <div class="col-4">
                                         <label for="lecture_id">
                                             <strong>Уникальный идентификатор лекции:</strong>
                                         </label>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-8">
                                         <input class='form-control i-2' type="text" id="lecture_id" name="lecture_id" value="{{lecture.id}}" required>
                                     </div>
                                 </div>
@@ -383,9 +387,11 @@
                                     </div>
                                 </div>
                                 <div class="form-row">
-                                    <div class="col-4"><label for="additional_file"> <strong>Загрузите дополнительный файл: </strong></label>
+                                    <div class="col-12"><label for="additional_file"> <strong>Если необходимо, загрузите текстовый, архивный файл или изображение (txt, doc, jpeg, jpg, bmp, png, pdf, rar, zip.):</strong></label>
                                     </div>
-                                    <div class="col-8">
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-12">
                                         <input type="file" class="form-control" id="additional_file" name="additional_file">
                                     </div>
                                 </div>
